# rust_programming_language

add/: ReadMe.md
add/add-one/src/: lib.rs
adder/: ReadMe.md
adder/src/: lib.rs
adder/tests/: integration_test.rs
advanced_features/: ReadMe.md
advanced_features/src/: main.rs
closures/src/: lib.rs  main.rs
collection/: ReadMe.md
collection/src/: main.rs
doc/src/: lib.rs
enum_test/: ReadMe.md
enum_test/src/: main.rs
error/: ReadMe.md
error/src/: main.rs
fibonacci/src/: main.rs
generic/: ReadMe.md
generic/src/: main.rs
guessing_game/: ReadMe.md
guessing_game/src/: main.rs
hello/: ReadMe.md
hello/src/: lib.rs
hello_macro/hello_macro_derive/: Cargo.toml
hello_macro/hello_macro_derive/src/: lib.rs
iterator/: ReadMe.md
iterator/src/: lib.rs  main.rs
minigrep/: ReadMe.md
minigrep/src/: lib.rs  main.rs
minigrep2/: Cargo.toml
minigrep2/src/: lib.rs  main.rs
myproject/: Cargo.toml  ReadMe.md
myproject/src/: custom_error.rs  error_handling.rs  generictype.rs  main.rs  ownership.rs  result_map.rs  syntax.rs
oop/: ReadMe.md
oop/src/: lib.rs  main.rs  statepattern.rs
pancake/: Cargo.toml  ReadMe.md
pattern_match/: ReadMe.md
pattern_match/src/: main.rs
restaurant/: ReadMe.md
restaurant/src/: front_of_house.rs  lib.rs
smart_pointer/: ReadMe.md
smart_pointer/src/: lib.rs  main.rs  main_.rs
thread/: ReadMe.md
thread/src/: main.rs  message_send.rs
