[package]
name = "myproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
juniper = "0.14.1"
quick-error = "=1.2.2"
error-chain = "=0.12.0"
backtrace = "=0.3.18"
rand = "0.6.5"